[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Krizmanich Karoly (Krizmanich) <karoly.krizmanich@continental-corporation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1"
rocket = "0.4.5"
rocket_contrib = {version = "0.4.5", default-features = false, features = ["diesel_sqlite_pool","templates","tera_templates","json"]}
diesel = {version="1.4.4", features=["sqlite", "chrono"]}
serde = {version="1.0.117", features=["derive"]}
tera = {version="1.5.0"}

